# spread_macros

./: Cargo.toml  README.md  toml-maid.toml
proc/: Cargo.toml
proc/src/: anon.rs  common.rs  fn_struct.rs  lib.rs  slet.rs  spread.rs
src/: anon.rs  assert_fields_eq.rs  clone.rs  common.rs  fn_struct.rs  lib.rs  slet.rs  spread.rs
