[workspace]
members = [ "proc" ]

[package]
name = "nanotweaks"
version = "0.3.0"
authors = [ "nanocryk" ]
description = "Collection of tools to write cleaner and shorter code"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nanocryk/nanotweaks"

[features]
serde_derive = [ "nanotweaks-proc/serde_derive" ]

[dependencies]
nanotweaks-proc = { path = "proc" }
serde = { version = "1", features = [ "derive" ], default-features = false, optional = true }
