[package]
name = "spread_macros"
version = "0.2.0"
authors = [ "nanocryk" ]
description = "Macros around an extended spread syntax"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nanocryk/spread_macros"

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = "2.0.50"

[lib]
proc-macro = true
